# 102_AIDE

./: GEMINI.md  ROADMAP.md  Step 2: Basic ReAct Loop Enhancement (Ph.md  Step 4: Core Implementation, Testing, an.md  Step 5: API Schema Grounding and Code Ma.md  Step 6: Real‑Time Interaction and Perfor.md  Step 7: Process Orchestration and Resili.md  adder.py  api_schema.json  code_map.json  interactive_runner.py  plan.json  run_tests.sh  spec.json  test_calculator.py  test_report.json
.dev_docs/: FEATURES.md  Overview.md  README.md  Step 1: Minimal Chat Agent (Phase 0 – MV.md  Step 3: Spec‑First Agent (Phase 1 – Core.md  Step 7: Process Orchestration and Resili.md  Step 8: Policy Router Integration.md  Step9_MissingFeatures.md  (+1 more)
aide/: README.md  pyproject.toml  requirements.txt
aide/aide/prompts/: plan_prompt.txt
aide/prompts/: critic_prompt.txt  debug_implementer_prompt.txt  debug_prompt.txt  implementer_prompt.txt  performance_prompt.txt  plan_prompt.txt  refactor_implementer_prompt.txt  refactor_prompt.txt  research_prompt.txt  router_prompt.txt  spec_prompt.txt  tester_prompt.txt
aide/src/aide/: app.py  graph.py  interactive_runner.py  models.py  test_tools.py  tools.py  utils.py
benchmark_system_DONT_TOUCH/project_skeletons/project1/: README.md  project_1_knowledge_base_generator_python_requirements.md  pyproject.toml
benchmark_system_DONT_TOUCH/project_skeletons/project1/src/: app.py
benchmark_system_DONT_TOUCH/project_skeletons/project1/src/kb/: cli.py
benchmark_system_DONT_TOUCH/project_skeletons/project1/tests/: test_cli.py  test_health.py
(+25 files in other folders)
