[tool.poetry]
name = "aide"
version = "0.1.0"
description = "A minimal chat agent for coding."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "*"
langchain-google-genai = "*"
langchain = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"